[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/ship_A.png" type="Texture" id=1]
[ext_resource path="res://Ship.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ShipA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "mouse_exit"
tracks/0/type = "value"
tracks/0/path = NodePath("ShipA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.905882, 0.894118, 0.141176, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "mouse_over"
tracks/0/type = "value"
tracks/0/path = NodePath("ShipA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.768627, 0.909804, 0.0941176, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "selected"
tracks/0/type = "value"
tracks/0/path = NodePath("ShipA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.980392, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Ship" type="KinematicBody2D"]
collision_layer = 2
input_pickable = true
script = ExtResource( 2 )

[node name="ShipA" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 20.0

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/mouse_exit = SubResource( 3 )
anims/mouse_over = SubResource( 4 )
anims/selected = SubResource( 5 )

[connection signal="input_event" from="." to="." method="_on_Ship_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Ship_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Ship_mouse_exited"]
